# python09-campus-reshub-api

./: .env  .env.example  .gitignore  README.md  campus_reshub_api_collection.json  campus_reshub_db_setup.sql  campus_reshub_mysql_setup.sql  main.py  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/management/commands/: seed_admin.py  seed_test_data.py
apps/accounts/migrations/: 0001_initial.py
apps/audit/: admin.py  models.py  serializers.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py
apps/bookings/: admin.py  models.py  serializers.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py
apps/notifications/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/resources/: admin.py  models.py  serializers.py  urls.py  views.py
apps/resources/migrations/: 0001_initial.py
bookings/: models.py  serializers.py  views.py
config/: exception_handlers.py  settings.py  urls.py
config/settings/: base.py  production.py
core/: middleware.py  mixins.py  permissions.py  response.py  validators.py
resources/: models.py  serializers.py  urls.py  views.py
