[project]
name = "python09-campus-reshub-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "mysqlclient>=2.2.8",
    "python-decouple>=3.8",
]
